# check_alexa_sites

./: Cargo.toml  Makefile  README.md  websites.txt
sites/: CA_sites.txt  FR_sites.txt  MX_sites.txt
src/: main.rs
