[package]
name = "check_alexa_sites"
version = "0.1.0"
authors = ["Arun Tomar <arun@tunnelbear.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
log = "0.4.11"
env_logger = "0.8.2"
clap = "2.33.3"